client/src/components/RandomMovie/RandomMovie.scss
@import "../../styles/settings/variables";

.random-movie-poster {
  width: 100%;
  height: 40vh;
  position: relative;
}

.RandomMovie {
  .loading-cont,
  .error-cont {
    width: 95% !important;
    height: 40vh;
  }
}

.movie-title {
  cursor: default;
}

@media screen and (max-width: 484px) {
  .movie-title {
    padding: 0.375rem 0.75rem;
    position: absolute;
    left: 0.5rem;
    bottom: 2.5rem;
    font-size: 0.5rem;
  }
  .btn-more-info {
    position: absolute;
    left: 0.5rem;
    bottom: 0.5rem;
    font-size: 0.5rem;
  }
  .bi-info-circle {
    position: relative;
    bottom: 0.05rem;
  }
}

@media (max-width: 484px) and (orientation: landscape) {
  .random-movie-poster,
  .loading-cont,
  .error-cont {
    height: 60vh;
  }
  .bi-info-circle {
    position: relative;
    bottom: 0.05rem;
  }
}

@media screen and (min-width: 485px) {
  .movie-title {
    padding: 0.375rem 0.75rem;
    position: absolute;
    left: 2rem;
    bottom: 5rem;
    font-size: 1rem;
  }
  .btn-more-info {
    position: absolute;
    left: 2rem;
    bottom: 2rem;
    font-size: 1rem;
  }
  .bi-info-circle {
    position: relative;
    bottom: 0.1rem;
  }
}

@media (min-width: 768px) {
  .random-movie-poster,
  .loading-cont,
  .error-cont {
    height: 70vh;
  }
  .bi-info-circle {
    position: relative;
    bottom: 0.1rem;
  }
}

